edit,delete post,assignment

--- a/src/app/pages/post/post.component.html
+++ b/src/app/pages/post/post.component.html
@@ -3,8 +3,14 @@
     <hr/>
     <p><b>Instruction</b>: {{data.instruction}}</p>
     <hr/>
-    <p><b>Release Date</b>: {{data.releaseDate}}</p>
+    <p *ngIf="!data.published"><b>Will be released on</b>: {{data.releaseDate}}, {{data.releaseTime}}</p>
+    <p *ngIf="data.published"><b>Released on</b>: {{data.releaseDate}}, {{data.releaseTime}}</p>
     <hr/>
+    <div *ngIf="data.hasfiles">
+        Files:
+        <downloader [url]="data.files.url" [filename]="data.files.name"></downloader>
+    </div>
+
     <b>Discussion</b>:
     <div>
     <app-commentstack [disabled]="!data.discussable" [parentID]="data.id" [comments]="data.comments"></app-commentstack>    
