--- a/src/app/pages/assignment/assignment.component.html
+++ b/src/app/pages/assignment/assignment.component.html
@@ -3,13 +3,13 @@
     <hr/>
     <p><b>Instruction</b>: {{taskdata.instruction}}</p>
     <hr/>
-    <div *ngIf="taskhasfiles">
+    <div *ngIf="taskdata.hasfiles">
     <b>Files:</b> <br>
     <downloader [url]="taskdata.files.url" [filename]="taskdata.files.name"></downloader>
     <hr/>
     </div>
     <p *ngIf="taskdata.published">Released on: {{taskdata.releaseDate}}, {{taskdata.releaseTime}}</p>
-    <p *ngIf="!taskdata.published">Will be released at: {{taskdata.releaseDate}}, {{taskdata.releaseTime}}</p>
+    <p *ngIf="!taskdata.published">Will be released on: {{taskdata.releaseDate}}, {{taskdata.releaseTime}}</p>
     <hr/>
     <p>Due by: {{taskdata.dueDate}}, {{taskdata.dueTime}}</p>
     <hr/>
