--- a/src/app/pages/profcourse/profcourse.component.html
+++ b/src/app/pages/profcourse/profcourse.component.html
@@ -10,7 +10,7 @@
 
 
 
-    <form *ngIf="makingPost" #postForm = "ngForm" (ngSubmit) = "makePost(postForm.value)">
+    <form *ngIf="makingPost||editingPost" #postForm = "ngForm" (ngSubmit) = "makePost(postForm.value)">
         <div class="form-floating">
             <input type="text" class="form-control" id="title" placeholder="Title" name="title" ngModel>
             <label for="title" class="form-label">Title of Post</label>
@@ -23,6 +23,10 @@
         <div class="form-check">
             <input type="checkbox" class="form-check-input" name="releasePostNow" (change)="releasePostNow=!releasePostNow" ngModel>
             <label for="releasePostNow" class="form-check-label">Publish Immediately</label>
+        </div>
+        <div class="form-check">
+            <input type="checkbox" class="form-check-input" name="discussable" ngModel>
+            <label for="discussable" class="form-check-label">Discussable</label>
         </div>
         <div class="form-floating" *ngIf="!releasePostNow">
             <input type="date" class="form-control" id="releaseDate" placeholder="ReleaseDate" name="releaseDate" (change)="validateDates(postForm)" ngModel>
@@ -51,8 +55,8 @@
             <!-- <button class="btn btn-outline-info margined" (click)="triggerFileChooser()">Upload files</button> -->
             <!-- </p> -->
         </div>
-        <p class="alert alert-danger" *ngIf="datesinvalid">Please ensure that the release date and due date
-    are not in the past and that due date is after the release date. </p>
+        <p class="alert alert-danger" *ngIf="datesinvalid">Please ensure that the due date
+    is not in the past and is after the release date.</p>
         <div class="form-check">
             <input type="checkbox" class="form-check-input" name="releaseTaskNow" (change)="releaseTaskNow=!releaseTaskNow" ngModel>
             <label for="releaseTaskNow" class="form-check-label">Publish Immediately</label>
@@ -113,8 +117,16 @@
     <h3>Posts <i class="bi bi-megaphone-fill" style="font-size: 2rem;"></i></h3>
     <div *ngFor="let post of posts">
         <div class="container" style="margin: 30px;">
-            <h5>{{post.number+1}}. {{post.title}}</h5>
+            <h5>{{post.number+1}}. {{post.title}} 
+                <button class="btn btn-outline-dark" id="{{post.number}}" (click)="loadFormToEdit(post.number,'postform')"><i class="bi bi-pencil"></i>Edit</button>
+                <button style="float: right;" class="btn btn-outline-dark" id="{{post.number}}" (click)="deleteElement('post',post.number)"><i class="bi bi-trash"></i>Delete</button>
+            </h5>
             <p style="overflow: hidden;"><b>Instruction</b>: {{post.instruction}}</p>
+            <div *ngIf="post.hasfiles">
+                Files: <downloader [url]="post.files.url" [filename]="post.files.name"></downloader>
+            </div>
+            <a href="posts/{{courseid}}/{{post.number}}" target="_blank">Discussion</a>
+                
         </div>
     </div>
 
@@ -123,16 +135,26 @@
     <h3>Assignments <i class="bi bi-file-earmark-fill" style="font-size: 2rem;"></i></h3>
     <div *ngFor="let task of assignments">
         <div class="container" style="margin: 30px;">
-            <h5>{{task.number+1}}. {{task.title}} <button class="btn btn-outline-dark" id="{{task.number}}" (click)="loadFormToEdit(task.number,assignform)"><i class="bi bi-pencil"></i>Edit</button></h5>
+            <h5>{{task.number+1}}. {{task.title}} 
+                <button class="btn btn-outline-dark" id="{{task.number}}" (click)="loadFormToEdit(task.number,'assignform')"><i class="bi bi-pencil"></i>Edit</button>
+                <button style="float: right;" class="btn btn-outline-dark" id="{{task.number}}" (click)="deleteElement('assignment',task.number)"><i class="bi bi-trash"></i>Delete</button>
+            </h5>
             <div class="btn-group-horizontal" style="margin: 0px; margin-left: 0px;">
                 <p class="btn btn-secondary text-left" style="text-align: left;margin:3px;padding: 0px;padding-left: 3px;padding-right:3px;"><i class="bi bi-eye"></i> {{task.seenby}}</p>
                 <p class="btn btn-secondary text-left" style="text-align: left;margin:3px; padding: 0px;padding-left: 3px;padding-right:3px;"><i class="bi bi-check"></i> {{task.submittedby}}</p>
             </div>
             <p style="overflow: hidden;"><b>Instruction</b>: {{task.instruction}}</p>
+            <div *ngIf="task.hasfiles">
+            Files: <downloader [url]="task.files.url" [filename]="task.files.name"></downloader>
+            </div>
+            <p *ngIf="task.weight!=null" class="alert alert-success">Weightage: {{task.weight}}</p>
+            <p *ngIf="task.weight==null" class="alert alert-warning">Weightage not set</p>
+            <p>Release: {{task.releaseDate}}, {{task.releaseTime}} | Due at: {{task.dueDate}}, {{task.dueTime}}</p>
             <div class="btn-group">
-                <button class="btn btn-outline-dark" id="{{task.number}}" (click)="triggerFileChooser(task.number)"><i class="bi bi-upload"></i> Feedback</button>
                 <button class="btn btn-outline-dark" id="{{task.number}}" (click)="downloadSubmissions(task.number)"><i class="bi bi-download"></i>Submissions</button>
-                <button class="btn btn-outline-dark" id="{{task.number}}" (click)="markAsGraded(task.number)"><i class="bi bi-check"></i>Release Grades</button>
+                <button class="btn btn-outline-dark" id="{{task.number}}" (click)="triggerFileChooser(task.number)"><i class="bi bi-upload"></i> Feedback</button>
+                <button *ngIf="!task.graded" class="btn btn-outline-success" id="{{task.number}}" (click)="markAsGraded(task.number)"><i class="bi bi-check"></i>Release Grades</button>
+                <button *ngIf="task.graded" class="btn btn-outline-danger" id="{{task.number}}" (click)="markAsGraded(task.number,false)"><i class="bi bi-check"></i>Retract Grades</button>
             </div>
 
         </div>
