--- a/src/app/pages/grades/grades.component.html
+++ b/src/app/pages/grades/grades.component.html
@@ -1,3 +1,3 @@
-<div *ngFor="let course of courses">
+<div *ngFor="let course of studentCourses">
     <a href="grades/{{course.courseID}}"  class="btn btn-primary">{{course.courseCode}}</a>
 </div>
