--- a/src/app/pages/members/members.component.html
+++ b/src/app/pages/members/members.component.html
@@ -3,6 +3,6 @@
     <mat-tab label="Second">Content 2</mat-tab>
     <mat-tab label="Third">Content 3</mat-tab>
 </mat-tab-group> -->
-<app-membertable (sendlist)="sendEditedList($event)" [courseid]="courseid" [members]="members['students']" [memberids]="getKeys(members['students'])" [title]="'Students'" [level]="accesslevel"></app-membertable>
-<app-membertable (sendlist)="sendEditedList($event)" [courseid]="courseid" [members]="members['instructors']" [memberids]="getKeys(members['instructors'])" [title]="'Instructors'" [level]="accesslevel"></app-membertable>
-<app-membertable (sendlist)="sendEditedList($event)" [courseid]="courseid" [members]="members['wizards']" [memberids]="getKeys(members['wizards'])" [title]="'Wizards'" [level]="accesslevel"></app-membertable>
+<app-membertable (sendlist)="sendEditedList($event)" [courseid]="courseid" [data]="members['students']"  [title]="'Students'" [level]="accesslevel"></app-membertable>
+<app-membertable (sendlist)="sendEditedList($event)" [courseid]="courseid" [data]="members['instructors']" [title]="'Instructors'" [level]="accesslevel"></app-membertable>
+<app-membertable (sendlist)="sendEditedList($event)" [courseid]="courseid" [data]="members['wizards']" [title]="'Wizards'" [level]="accesslevel"></app-membertable> 
