--- a/src/app/components/todolist/todolist.component.html
+++ b/src/app/components/todolist/todolist.component.html
@@ -1,4 +1,4 @@
-<table class="table" style="width: 350px;">
+<table class="table">
 
     <tr>
         <th style="text-align: center;"><h3>Upcoming</h3></th>
