--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,22 +1,26 @@
-<div style="margin: 20px;float: left;">
-    <h3>Hello, {{userdata.username}}!</h3>
-    <hr/>
-    <div *ngIf="studentCourses.length>0">
-    <h4>Courses you attend:</h4>
-    <app-course [isprof]="false" [courses]="studentCourses"></app-course>
-    <hr/>
-    </div>
-    <div *ngIf="instructorCourses.length>0">
-    <h4>Courses you instruct:</h4>
-    <app-course [isprof]="true" [courses]="instructorCourses"></app-course>
-    <hr/>
-    </div>
-    <div *ngIf="wizardCourses.length>0">
-    <h4>Courses you run:</h4>
-    <app-course [isprof]="true" [courses]="wizardCourses"></app-course>
-    </div>
 
-</div>
-<div style="float:right;">
-    <app-todolist></app-todolist>
+<div class="container-fluid">
+    <div class="row">
+      <div class="col-8" style="margin: 20px; float: left;">
+        <h3>Hello, {{userdata.username}}!</h3>
+        <hr/>
+        <div *ngIf="studentCourses.length>0">
+        <h4>Courses you attend:</h4>
+        <app-course [isprof]="false" [courses]="studentCourses"></app-course>
+        <hr/>
+        </div>
+        <div *ngIf="instructorCourses.length>0">
+        <h4>Courses you instruct:</h4>
+        <app-course [isprof]="true" [courses]="instructorCourses"></app-course>
+        <hr/>
+        </div>
+        <div *ngIf="wizardCourses.length>0">
+        <h4>Courses you run:</h4>
+        <app-course [isprof]="true" [courses]="wizardCourses"></app-course>
+        </div>
+      </div>
+      <div class="col-3" style="float:right !important;">
+        <app-todolist></app-todolist>
+      </div>
+    </div>
 </div>
