--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -37,7 +37,7 @@
             </div>
             <div class="form-floating mb-3">
                 <input type="date" class="form-control" id="dob" placeholder="DOB" name="DOB" ngModel>
-                <label for="dob" class="form-label">Date of Birth</label>
+                <label for="DOB" class="form-label">Date of Birth</label>
             </div>
             <div class="form-floating mb-3">
                 <input type="password" class="form-control" id="password" placeholder="Password" name="password" ngModel>
