--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -6,7 +6,7 @@
             <a *ngIf="isauth" class="nav-link" href="/dashboard">Dashboard</a>
           </li>
           <li class="nav-item">
-            <a *ngIf="isauth" class="nav-link" href="/grades">My Grades</a>
+            <a *ngIf="isauth" class="nav-link" href="/grades">Grades</a>
           </li>
           <li class="nav-item">
             <a *ngIf="isauth" class="nav-link" href="/create_course">Create Course</a>
