--- a/src/app/components/course/course.component.html
+++ b/src/app/components/course/course.component.html
@@ -4,5 +4,9 @@
         <h3>{{course.courseCode}}</h3>
         <h6>{{course.courseName}}</h6>
         <h4 *ngIf="course.new=='true'" style="color: green;"><i class="bi bi-exclamation-circle-fill"></i> New</h4>
+        <div  *ngIf="!isprof">
+            {{course.progress}}%
+            <mat-progress-bar [value]="course.progress" [color]="'Green'"></mat-progress-bar>
+        </div>
     </button>
 </p>
