--- a/src/app/components/course-item/course-item.component.html
+++ b/src/app/components/course-item/course-item.component.html
@@ -1,41 +1,44 @@
-<table class="table">
-    <colgroup>
-        <col span="1" style="width: 5%;">
-        <col span="1" style="width: 5%;">
-        <col span="1" style="width: 95%;">
-    </colgroup>
-    <tr>
-        <th colspan="3" style="text-align: center;"><h3>Posts</h3></th>
-    </tr>
-    <tr *ngFor="let post of posts" (click)="navigateToPost(post)">
-        <td><i class="bi bi-megaphone-fill" style="font-size: 2rem;"></i></td>
-        <td>
-            <h4>{{post.number+1}}</h4>
-        </td>
-        <td>
-            <h4>{{post.title}}</h4>
-        </td>
-    </tr>
-</table>
-<table class="table">
-    <colgroup>
-        <col span="1" style="width: 5%;">
-        <col span="1" style="width: 5%;">
-        <col span="1" style="width: 95%;">
-    </colgroup>
-    <tr>
-        <th colspan="3" style="text-align: center;"><h3>Assignments</h3></th>
-    </tr>
-    <tr *ngFor="let task of assignments" (click)="navigateToSub(task)">
-        <td><i class="bi bi-file-earmark-fill" style="font-size: 2rem;"></i></td>
-        <td>
-            <h4>{{task.number+1}}</h4>
-        </td>
-        <td>
-            <h4>{{task.title}}</h4>
-        </td>
-    </tr>
-</table>
+<mat-tab-group>
+    <mat-tab label="Posts 📢">
+        <table class="table" style="margin: 20px;width: 90%;">
+            <colgroup>
+                <col span="1" style="width: 5%;">
+                <col span="1" style="width: 5%;">
+                <col span="1" style="width: 90%;">
+                
+            </colgroup>
+            <tr *ngFor="let post of posts" (click)="navigateToPost(post)">
+                <td><i class="bi bi-megaphone-fill" style="font-size: 2rem;"></i></td>
+                <td>
+                    <h4>{{post.number+1}}</h4>
+                </td>
+                <td>
+                    <h4>{{post.title}}</h4>
+                </td>
+            </tr>
+        </table>
+    </mat-tab>
+    <mat-tab label="Assignments 📝">
+
+        <table class="table" style="margin: 20px;width: 90%;">
+            <colgroup>
+                <col span="1" style="width: 5%;">
+                <col span="1" style="width: 5%;">
+                <col span="1" style="width: 95%;">
+            </colgroup>
+            <tr *ngFor="let task of assignments" (click)="navigateToSub(task)">
+                <td><i class="bi bi-file-earmark-fill" style="font-size: 2rem;"></i></td>
+                <td>
+                    <h4>{{task.number+1}}</h4>
+                </td>
+                <td>
+                    <h4>{{task.title}}</h4>
+                </td>
+            </tr>
+        </table>
+        
+    </mat-tab>
+</mat-tab-group>
 
 <!--
 <div style="margin: 20px;">
